--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 ﻿<!DOCTYPE html><html lang="en">
 <head><meta charset="utf-8">
-<title>Homework 2</title>
+<title>Homework 3 藍萱</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
 <meta name="author" content="">
-<link href="css/bootstrap.css" rel="stylesheet"> 
+<link href="../../../Desktop/h3/css/bootstrap.css" rel="stylesheet"> 
 <style>
       body {
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
       }
 </style>
-<link href="css/bootstrap-responsive.css" rel="stylesheet">
-<link href="css/bootstrap-select.min.css" rel="stylesheet" type="text/css" media="screen" >
+<link href="../../../Desktop/h3/css/bootstrap-responsive.css" rel="stylesheet">
+<link href="../../../Desktop/h3/css/bootstrap-select.min.css" rel="stylesheet" type="text/css" media="screen" >
 </head>
 <body  onload="init()">
 <div class="navbar navbar-inverse navbar-fixed-top">
@@ -91,9 +91,9 @@
 <div id="temp">No data.</div>
 <h4>Text</h4>
 <div id="text">No data.</div></div></div></div> 
-<script src="js/jquery-1.9.1.min.js"></script> 
-<script src="js/bootstrap.min.js"></script>
-<script src="js/bootstrap-select.min.js"></script> 
+<script src="../../../Desktop/h3/js/jquery-1.9.1.min.js"></script> 
+<script src="../../../Desktop/h3/js/bootstrap.min.js"></script>
+<script src="../../../Desktop/h3/js/bootstrap-select.min.js"></script> 
 <script type="text/javascript">
 
     function acity(name, value, count, child) {
